--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "gpt4-langchain-pdf-chatbot",
-  "version": "0.0.1",
+  "name": "theauschwitzproject",
+  "version": "0.0.2",
   "private": true,
   "engines": {
     "node": ">=18"
   },
   "license": "MIT",
-  "author": "Mayooear<twitter:@mayowaoshin>",
+  "author": "Luke Kosner",
   "type": "module",
   "scripts": {
     "dev": "next dev",
@@ -47,15 +47,9 @@
     "typescript": "^4.9.5"
   },
   "keywords": [
-    "starter",
-    "gpt4",
-    "pinecone",
-    "typescript",
-    "nextjs",
-    "langchain",
-    "law",
-    "legal",
-    "pdf",
-    "openai"
+    "holocaust",
+    "auschwitz",
+    "ai",
+    "codeforgood"
   ]
 }
