--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "theauschwitzproject",
   "version": "0.0.5",
-  "private": true,
+  "private": false,
   "engines": {
     "node": ">=18"
   },
