--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theauschwitzproject",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "private": false,
   "license": "MIT",
   "author": "Luke Kosner",
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
+    "sharp": "^0.32.0",
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
