--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theauschwitzproject",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "license": "MIT",
   "author": "Luke Kosner",
@@ -26,6 +26,7 @@
     "langchain": "0.0.41",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
+    "nextjs-google-analytics": "^2.3.3",
     "pdf-parse": "1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
