--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theauschwitzproject",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "license": "MIT",
   "author": "Luke Kosner",
@@ -21,7 +21,11 @@
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "langchain": "0.0.41",
     "lucide-react": "^0.125.0",
